# gRPC-Integration

./: README.md
cpp/: CMakeLists.txt  README.md  main.cpp
go/: Makefile  README.md  go.mod
go/client/: bidirectional_stream.go  client.go  client_stream.go  server_stream.go  unary.go
go/proto/: greet.pb.go  greet_grpc.pb.go
go/server/: bidirectional_stream.go  client_stream.go  server.go  server_stream.go  unary.go
node/: README.md  package-lock.json  package.json  tsconfig.json
node/src/: client.ts
node/src/proto/: greet.proto
node/src/rpc/: greet.ts
node/src/rpc/greet_service/: GreetService.ts  HelloRequest.ts  HelloResponse.ts  MessageList.ts  NameList.ts  NoParam.ts
